@@ -172,6 +172,22 @@ name|Transform
 argument_list|>
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|HiveConf
+operator|.
+name|getBoolVar
+argument_list|(
+name|hiveConf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEOPTCP
+argument_list|)
+condition|)
+block|{
 name|transformations
 operator|.
 name|add
@@ -181,17 +197,23 @@ name|ColumnPruner
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 if|if
 condition|(
-name|hiveConf
+name|HiveConf
 operator|.
-name|getBoolean
+name|getBoolVar
 argument_list|(
-literal|"hive.optimize.ppd"
+name|hiveConf
 argument_list|,
-literal|false
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEOPTPPD
 argument_list|)
 condition|)
+block|{
 name|transformations
 operator|.
 name|add
@@ -201,6 +223,7 @@ name|PredicatePushDown
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 name|transformations
 operator|.
 name|add
